[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "daxus"
author = "John Vishnefske"
author-email = "jvishnnefske@gmail.com"
home-page = "https://pypy.org/project/daxus"
description-file = "README.md"
classifiers = [
"License :: OSI Approved :: BSD License",
"Programming Language :: Python :: 3",
"Topic :: System :: Hardware :: Hardware Drivers",
"Development Status :: 4 - Beta"]
